# sa_api

./: Cargo.toml  README.md
.do/: deploy.template.yaml
.github/workflows/: deployment.yml
deployment/: Dockerfile.app
src/: main.rs
src/application/api/: keycloak.rs  mod.rs  router.rs  token.rs
src/application/api/person/: mod.rs  person_router.rs
src/application/api/speech/: mod.rs  speech_router.rs
src/domain/person/: manager.rs  mod.rs  person.rs  repository.rs
src/domain/speech/: manager.rs  mod.rs  sentence.rs  speech.rs  speech_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/person/postgres/: postgres_repository.rs
src/infrastructure/speech/postgres/: repository.rs
