[package]
name = "speech_analytics_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "speech_analytics_api"
path = "src/main.rs" # Chemin du fichier main

[dependencies]
mockall = "0.13.1"
chrono = "0.4.39"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
bytes = "1.2"
async-trait = "0.1.83"
jsonwebtoken = "9.3.0"
tower = {version="0.5.2", features = ["util"]}
tower-http = {version = "0.6.2", features = ["cors"]}
cached = "0.54.0"
reqwest = { version = "0.12.12", features = ["json"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
